Inclusion of Roadbook and Photobook + Last corrections / improvements again ! (grammar, layout...)

--- a/Photo book.lyx
+++ b/Photo book.lyx
@@ -289,7 +289,7 @@ Malgré tout, la Loire est belle
 \end_inset
 
 
-\begin_inset VSpace 0.25cm
+\begin_inset VSpace 0.2cm
 \end_inset
 
 
@@ -297,7 +297,7 @@ Malgré tout, la Loire est belle
 Crépuscules ligériens
 \size default
 
-\begin_inset VSpace 0.25cm
+\begin_inset VSpace 0.2cm
 \end_inset
 
 
@@ -411,11 +411,11 @@ Aller à la contemplation
 \end_inset
 
 
-\begin_inset VSpace 0.25cm
+\begin_inset VSpace 0.2cm
 \end_inset
 
 Sel sur mes lèvres et vagues m'aspergeant : bel avant-goût de l'océan
-\begin_inset VSpace 0.25cm
+\begin_inset VSpace 0.2cm
 \end_inset
 
 
@@ -598,7 +598,7 @@ Des paysages et l'ami Francis !
 
 \shape slanted
 \size largest
-Ce nomadisme nous offre la plus belle des vies
+Ce nomadisme, c'est la plus belle des vies
 \size default
 
 \begin_inset Newpage clearpage
@@ -619,7 +619,7 @@ Ce nomadisme nous offre la plus belle des vies
 \end_inset
 
 
-\begin_inset VSpace 0.25cm
+\begin_inset VSpace 0.2cm
 \end_inset
 
 
@@ -627,7 +627,7 @@ Ce nomadisme nous offre la plus belle des vies
 Se délecter d'une nature haute et colorée 
 \size default
 
-\begin_inset VSpace 0.25cm
+\begin_inset VSpace 0.2cm
 \end_inset
 
 
@@ -753,7 +753,7 @@ Chercher et s'accrocher à ses rêves
 \end_inset
 
 
-\begin_inset VSpace 0.2cm
+\begin_inset VSpace 0.1cm
 \end_inset
 
 
@@ -761,7 +761,7 @@ Chercher et s'accrocher à ses rêves
 Voleter à deux, de monts en montagnes 
 \size default
 
-\begin_inset VSpace 0.2cm
+\begin_inset VSpace 0.1cm
 \end_inset
 
 
