Last corrections again ! (hyphen, pictures...)

--- a/Photo book.lyx
+++ b/Photo book.lyx
@@ -72,7 +72,7 @@
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2263.JPG
+	filename pictures/down-loire/big/IMG_2263.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -110,7 +110,7 @@ status open
 \shape slanted
 \size large
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2285.JPG
+	filename pictures/down-loire/big/IMG_2285.jpg
 	lyxscale 5
 	width 6cm
 
@@ -123,7 +123,7 @@ status open
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2269.JPG
+	filename pictures/down-loire/big/IMG_2269.jpg
 	lyxscale 5
 	width 6cm
 
@@ -198,7 +198,7 @@ Surprenante source de Loire
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2589.JPG
+	filename pictures/down-loire/big/IMG_2589.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -213,7 +213,7 @@ Surprenante source de Loire
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2308.JPG
+	filename pictures/down-loire/big/IMG_2308.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -227,7 +227,7 @@ Surprenante source de Loire
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2322.JPG
+	filename pictures/down-loire/big/IMG_2322.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -242,7 +242,7 @@ Surprenante source de Loire
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2414.JPG
+	filename pictures/down-loire/big/IMG_2414.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -282,7 +282,7 @@ Malgré tout, la Loire est belle
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2426.JPG
+	filename pictures/down-loire/big/IMG_2426.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -302,7 +302,7 @@ Crépuscules ligériens
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2490.JPG
+	filename pictures/down-loire/big/IMG_2490.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -320,7 +320,7 @@ Crépuscules ligériens
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2466.JPG
+	filename pictures/down-loire/big/IMG_2466.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -335,7 +335,7 @@ Crépuscules ligériens
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2673.JPG
+	filename pictures/down-loire/big/IMG_2673.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -349,7 +349,7 @@ Crépuscules ligériens
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2556.JPG
+	filename pictures/down-loire/big/IMG_2556.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -364,7 +364,7 @@ Crépuscules ligériens
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2714.JPG
+	filename pictures/down-loire/big/IMG_2714.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -404,7 +404,7 @@ Aller à la contemplation
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/down-loire/IMG_2650.JPG
+	filename pictures/down-loire/big/IMG_2650.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -420,7 +420,7 @@ Sel sur mes lèvres et vagues m'aspergeant : bel avant-goût de l'océan
 
 
 \begin_inset Graphics
-	filename pictures/down-loire/P5223609.JPG
+	filename pictures/down-loire/big/P5223609.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -438,7 +438,7 @@ Sel sur mes lèvres et vagues m'aspergeant : bel avant-goût de l'océan
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3036.JPG
+	filename pictures/long-walk/big/IMG_3036.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -453,7 +453,7 @@ Sel sur mes lèvres et vagues m'aspergeant : bel avant-goût de l'océan
 
 
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_2831.JPG
+	filename pictures/long-walk/big/IMG_2831.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -467,7 +467,7 @@ Sel sur mes lèvres et vagues m'aspergeant : bel avant-goût de l'océan
 
 
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3086.JPG
+	filename pictures/long-walk/big/IMG_3086.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -482,7 +482,7 @@ Sel sur mes lèvres et vagues m'aspergeant : bel avant-goût de l'océan
 
 
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_2994.JPG
+	filename pictures/long-walk/big/IMG_2994.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle -90
@@ -522,7 +522,7 @@ Des paysages et l'ami Francis !
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3200.JPG
+	filename pictures/long-walk/big/IMG_3200.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -537,7 +537,7 @@ Des paysages et l'ami Francis !
 
 
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3328.JPG
+	filename pictures/long-walk/big/IMG_3328.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -557,7 +557,7 @@ Des paysages et l'ami Francis !
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3191.JPG
+	filename pictures/long-walk/big/IMG_3191.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -572,7 +572,7 @@ Des paysages et l'ami Francis !
 
 
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3373.JPG
+	filename pictures/long-walk/big/IMG_3373.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -612,7 +612,7 @@ Ce nomadisme, c'est la plus belle des vies
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3359.JPG
+	filename pictures/long-walk/big/IMG_3359.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -638,7 +638,7 @@ Se délecter d'une nature haute et colorée
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3427.JPG
+	filename pictures/long-walk/big/IMG_3427.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -656,7 +656,7 @@ Se délecter d'une nature haute et colorée
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3437.JPG
+	filename pictures/long-walk/big/IMG_3437.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -671,7 +671,7 @@ Se délecter d'une nature haute et colorée
 
 
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3530.JPG
+	filename pictures/long-walk/big/IMG_3530.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -691,7 +691,7 @@ Se délecter d'une nature haute et colorée
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3402.JPG
+	filename pictures/long-walk/big/IMG_3402.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -706,7 +706,7 @@ Se délecter d'une nature haute et colorée
 
 
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3483.JPG
+	filename pictures/long-walk/big/IMG_3483.jpg
 	lyxscale 5
 	width 6cm
 	rotateAngle 90
@@ -746,7 +746,7 @@ Chercher et s'accrocher à ses rêves
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_3533.JPG
+	filename pictures/long-walk/big/IMG_3533.jpg
 	lyxscale 10
 	width 12.5cm
 
@@ -772,7 +772,7 @@ Voleter à deux, de monts en montagnes
 
 \shape slanted
 \begin_inset Graphics
-	filename pictures/long-walk/IMG_2981.JPG
+	filename pictures/long-walk/big/IMG_2981.jpg
 	lyxscale 10
 	width 12.5cm
 
